2.3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content # ПОДКЛЮЧЕНИЕ ConfigMap
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      - name: multitool
        image: wbitt/network-multitool:3.22
      volumes:
      - name: web-content
        configMap:
          name: web-content # УКАЖИТЕ имя созданного ConfigMap
